--- a/portfolio.html
+++ b/portfolio.html
@@ -279,11 +279,15 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="auto" height="200px" src="https://i.imgur.com/wk3mNDA.png">
-<img width="auto" height="225px" src="https://i.imgur.com/Sr63dkH.png"><br><br>
-<img width="auto" height="185px" src="https://i.imgur.com/649YKdQ.png">
-<img width="auto" height="155px" src="https://i.imgur.com/duXfaS2.png">
-<img width="auto" height="140px" src="https://i.imgur.com/IELWs2w.png"><br>
+<img width="auto" height="140px" src="https://i.imgur.com/wk3mNDA.png">
+<img width="auto" height="175px" src="https://i.imgur.com/Sr63dkH.png"><br><br>
+<img width="auto" height="160px" src="https://i.imgur.com/4aYtTpW.png">
+<img width="auto" height="145px" src="https://i.imgur.com/duXfaS2.png"><br><br>
+<img width="auto" height="175px" style="position:relative; left:15px;" src="https://i.imgur.com/S2EVcsO.png">
+<img width="auto" height="175px" style="position:relative; right:15px;"src="https://i.imgur.com/dbT2rab.png"><br><br>
+<img width="auto" height="175px" src="https://i.imgur.com/2O47CWj.png">　
+<img width="auto" height="175px" src="https://i.imgur.com/boeonj4.png"><br><br>
+
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
