--- a/portfolio.html
+++ b/portfolio.html
@@ -260,9 +260,9 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> ascii art<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img src="https://i.imgur.com/R7ay7fJ.png"><br><br>
-<img src="https://i.imgur.com/3ZpoYKJ.png"><br><br>
-<img src="https://i.imgur.com/R3XEkvO.png">
+<img src="https://i.imgur.com/R7ay7fJ.png"><br>
+<img src="https://i.imgur.com/R3XEkvO.png"><br><br>
+<img src="https://i.imgur.com/gaGzG0z.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -270,9 +270,7 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> photography<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="140px" height="140px" src="https://i.imgur.com/wH6uA8n.jpg">　<img width="140px" height="140px" src="https://i.imgur.com/FfbpbN1.png">
-<br><br><img width="140px" height="140px" src="https://i.imgur.com/lVueesw.jpg">　<img width="140px" height="140px" src="https://i.imgur.com/CpIBdRW.jpg">
-<br><br><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/kW0Y74l.png"><br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
