--- a/portfolio.html
+++ b/portfolio.html
@@ -323,7 +323,9 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
+<font style="font-size: 8px;" color="#b38d94">
+( click to download all the .swf files )
+</font><br><br>
 <a href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><img src="https://i.imgur.com/BltA2XT.gif"/></a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
@@ -338,6 +340,25 @@ z-index: 3;
 <img width="110" height="auto" src="https://i.imgur.com/wSRLuW7.png"><br><br>
 <img width="auto" height="60" src="https://i.imgur.com/kjJ7zti.gif">　<img width="auto" height="60"src="https://i.imgur.com/hxS2jLj.gif"><br><br>
 <img width="auto" height="60" src="https://i.imgur.com/bvAiMrD.gif">　<img width="auto" height="60"src="https://i.imgur.com/7mKu6kW.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> 3D modeling<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<font style="font-size: 8px;" color="#b38d94">
+( click the previews to load the .glb files )
+</font>
+<br><br>
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+
+<div style="border: none; width: 400px; height: 400px; overflow:hidden;">
+<model-viewer onclick="dismissPoster();" reveal="manual" style="overflow:hidden; --progress-bar-color:#d1b0b2; --progress-bar-height:2px; --poster-color:transparent; top:-120px; left:-120px; border:none; width:650px; height:650px;" src="https://file.pooftie.me/m/bunny.glb" environment-image="https://i.imgur.com/YqBKGCz.jpg" poster="https://i.imgur.com/srm5Lh3.png" exposure="1.2" data-js-focus-visible camera-controls></model-viewer>
+</div>
+<div style="border: none; width: 400px; height: 400px; overflow:hidden;">
+<model-viewer onclick="dismissPoster();" reveal="manual" style="overflow:hidden; --progress-bar-color:#d1b0b2; --progress-bar-height:2px; --poster-color:transparent; top:-120px; left:-140px; border:none; width:650px; height:650px;" src="https://file.pooftie.me/m/teddy.glb" environment-image="https://i.imgur.com/YqBKGCz.jpg" poster="https://i.imgur.com/q5eKeWy.png" exposure="1.2" data-js-focus-visible camera-controls></model-viewer>
+</div>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
