--- a/status.html
+++ b/status.html
@@ -325,10 +325,10 @@ z-index: 3;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20; line-height:8px;"><br><br>
-<br>　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">excited</font>‌ ‌ ‌<sub><sub><img src="https://i.imgur.com/wJTxKCo.gif"></sub></sub>
+<br>　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">happy</font>‌ ‌ ‌<sub><sub><img src="https://i.imgur.com/wJTxKCo.gif"></sub></sub>
 <br><br>
-　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">embroidery</font><br><br>
-　　　　‌‌　 ‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">needle felting</font><br><br>
+　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">needle felting</font><br><br>
+　　　　‌‌　‌‌　 ‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">video editing</font><br><br>
 </div>
 
 
@@ -336,6 +336,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>06.11.20</sup></font> <font color="#c48d8d">→</font>　dream, dream, dream
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>05.10.20</sup></font> <font color="#a0acbc">→</font>　so much to explore !!
 
 <br><br><br>
@@ -361,9 +364,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>20.04.20</sup></font> <font color="#bea5ce">→</font>　each day is special
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>10.04.20</sup></font> <font color="#c48d8d">→</font>　i don't need approval.
 
 
 </div>
