--- a/portfolio.html
+++ b/portfolio.html
@@ -284,7 +284,11 @@ z-index: 3;
 <img width="auto" height="175px" style="position:relative; left:15px;" src="https://i.imgur.com/S2EVcsO.png">
 <img width="auto" height="175px" style="position:relative; right:15px;"src="https://i.imgur.com/dbT2rab.png"><br><br>
 <img width="auto" height="175px" src="https://i.imgur.com/2O47CWj.png">　
-<img width="auto" height="175px" src="https://i.imgur.com/boeonj4.png"><br><br>
+<img width="auto" height="175px" src="https://i.imgur.com/boeonj4.png"><br><br><br>
+　<img src="https://i.imgur.com/Xd1FOQT.png">　
+<img src="https://i.imgur.com/JAyaC3w.png"><br><br>
+<img width="auto" height="155px" src="https://i.imgur.com/wLCd9cx.png">
+<img width="auto" height="155px" src="https://i.imgur.com/eKOxtVk.png"><br><br>
 
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
