--- a/gaming.html
+++ b/gaming.html
@@ -598,6 +598,18 @@ cutest baby there is.<br>
 
 <br><br><br><br>
 
+<sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
+<font color="#a8958d">　<b>poupée girl</b><br>
+　　　backup server : bentewee<br>
+　　　invitation codes : 5 left<br><br><br>
+
+<div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 270px; line-height:10px;">
+<iframe src="/pupe/1" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
+</div>
+</font>
+
+<br><br><br><br>
+
 <sub><sub><img src="https://i.imgur.com/p85CyLw.png"></sub></sub><font color="#a8958d">　<b>mobile games i have played and recommend :</b></font>
 <br>
 <br><br><br><br>
