--- a/stories.html
+++ b/stories.html
@@ -235,6 +235,11 @@ z-index: 3;
 
 <font color="#b89a9a" style="font-size:10px;">second episode</font><font color="#e6aeae" style="font-size:11px;"> ♡ </font><font color="#b89a9a" style="font-size:10px;">nice to meet you</font><br><br>
 <a href="/ii"><img width="360px" height="auto" src="https://i.imgur.com/Ba7h5DG.png"/></a><br>
+
+<br><br>
+
+<font color="#b89a9a" style="font-size:10px;">third episode</font><font color="#e6aeae" style="font-size:11px;"> ♡ </font><font color="#b89a9a" style="font-size:10px;">please feel welcome</font><br><br>
+<a href="/iii"><img width="360px" height="auto" src="https://i.imgur.com/8o44PeC.png"/></a><br>
 </center>
 
 <br><br><br><br>
