--- a/archive.html
+++ b/archive.html
@@ -321,6 +321,136 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/bAE2SKx.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>july . 12 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/6iqPFc5.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+long time no see !!
+the pandemic has been quite a lot to deal with lately, i am more and more being directly affected by it, it's making me scared and really anxious..
+i am trying to care of my mental and physical health as a priority, as i can not fulfill tasks or make good quality content if i'm feeling bad and unmotivated <sub><img src="https://i.imgur.com/MtUpNgx.gif"/></sub>
+i'm very thankful for the kind supportive words i receive, it fills me with hope in these dark days <font color="#d3a5a5" style="font-size:11px;">♡</font>
+my online store is finally getting away from the hiatus, besides the international flights being a mess right now i'm returning to selling and currently keeping the packages for shipping later on ..
+now going to the good news,
+we're trying our hardest to get over this quarantine and prepare our little home by buying everything we can online, and things are finally getting together now.
+contrary to my digital absence, i am working quite a lot in real life with decorating, gardening and many other things house related, so we were able to move there completely and take everything out of the boxes, and that makes me immensely happy <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+other thing is that i just ordered my wedding dress,, i will only get married next year, but i found my dream dress early and i couldn't help it. my heart just started fluttering when i saw it and i knew it has to be !
+i'm trying to save money because we are not getting as much income as the usual, but economy is getting more and more messy every passing day so i thought it would be a good idea to search for the most expensive things right now so we can make sure to have our little wedding in the woods by the date we planned.. !
+it will be a small modest wedding around nature and just a few loved ones, so my dress is not very fancy but a "vintage ballerina" inspired one, exactly as i wanted. it's the perfect combination between delicacy & purity <font color="#d3a5a5" style="font-size:11px;">♡</font>
+a beautiful flower wreath, a daisy bouquet, and my sincere love.. everything arranged into the most beautiful way i could dream of.
+
+in case you're curious, worry not, i made two collages showing a bit of my life plans :</pre>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/jahccXc.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://file.pooftie.me/r/lovely%20home.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">lovely home .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this <a id="linkbjinho" href="https://aes.pooftie.me/viii" target="_blank">first one</a> is all about my routine. there you can see my favorite apron, nightgown & dress, some stuffies, baking goods, how my house is looking like and lots of references to my current daily life !
+there are tons of photography of my actual items and the house, so it's a very berry special collage for me <sub><img src="https://i.imgur.com/mkwklj7.gif"/></sub></pre><br>
+
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/together.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">together .mp3</font></a>　
+</center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this is the matching melody i prepared specially for this occasion.
+it's simple & modest, full of love, just like i am at this very moment <sub><img src="https://i.imgur.com/fWsILXD.gif"/></sub>
+doing simple housework has been making me so happy, this is finally our precious home sweet home we waited for long 8 years...</pre><br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/OXhstj0.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://file.pooftie.me/r/delicate%20bride.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">delicate bride .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this <a id="linkbjinho" href="https://aes.pooftie.me/ix" target="_blank">second collage</a> is, of course, about my subtle passion for weddings !
+you can see my thoughts for the magical day, and the actual dress i ordered <font color="#d3a5a5" style="font-size:11px;">♡</font></pre><br>
+<br>
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/small%20wishes.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">small wishes .mp3</font></a>　
+</center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+and this is the matching melody, that sounds quite magical in my opinion.. i have been keeping this one for a long time, waiting for using for something special !
+hopefully now i will be able to return to my digital projects and make progress, besides still having lots of housework to do.. there is surely a lot going on lately, right ?
+by the way, after a lot of research and saving i finally got to buy a new laptop so now i am super motivated !!
+the first thing i did was painting an adorable drawing :</pre><br>
+
+<center><img width="360px" height="auto" src="https://i.imgur.com/PLAqbSa.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i played around with textures again and i really liked the results .. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i just showed you fluffies my laptop last post, but now i have a completely new setting, so here we go again :</pre><br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/ubcAKg9.gif"/></center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i'm very proud, isn't it super cute ?
+believe me or not, it's the first time i am using win10 .. i really like the win7, but it was starting to become a bother at this point ;;
+
+okay, after quite some time without writing q&a texts, i have been questioned about the latest events, naturally.. and i actually have some important things to say, that would add to my "political" background ; so let's go for it !</pre>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br>
+<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">why i won't write about certain political topics ?
+i don't like to give opinions on all kind of politics, economics or any subjects that i don't have proper knowledge to write about - however, it doesn't mean to the very least that i am apolitical. i don't believe being apolitical is even possible, just as "doing nothing" isn't possible. by ignoring things you are doing something, and ignoring bad things has a bad impact.. it may be hard to educate yourself, but it's necessary to find your path and not only fluctuate around other people's opinions ! there is no innocence in ignorance, excessive complacency is not a virtue but a harmful political position.
+that being said, i do have strong opinions over political topics but i only will write about the subjects that i feel comfortable posting publicly about. what i'm trying to say is that you can help in multiple ways without the need of spreading misinformation, as it does harm too. if i have not studied it properly, if my words wouldn't inspire in any way, if it isn't my place to speak, i won't dare touching it at all ; not because i don't care. on the contrary, i care quite enough for being sensible when standing for talking about important subjects that have impact over others !!
+i hope that is well clarified now, seeing that you always demand long answers from me to explain my decisions. knowing that people who follow my content really care about that kind of thing makes me motivated ♡
+
+now, more specifically : why i won't give my opinions on racism ?
+that one is a bitter question, saddening even.. how i wish that racism wasn't a topic where we needed to show an "opinion", being such disgusting act of hate. it's nonsense for me and i, thankfully, live around people who think so too. because of that, i know that simply throwing anti-racism words around those already educated people will not help effectively. i must do more.
+i do my best to actively help in causes that make a difference, not only with words but with actions. as you know, i do not use names of movements to represent myself, but i do support the relevant actions that these movements may offer, if they match my personal beliefs. the thing is that i, as a white girl, do not feel comfortable getting up to talk about a problem that i can't even imagine what it's like to experience .. this applies not only to racism but other forms of prejudice and oppression, i don't have the right to talk about things that are completely out of my life - however, i can, and will, help with actions that are within my capacity. i will endure and try to help in a relevant way, rather than passively.
+you won't see me throwing words of support regarding movements, but if something really important with direct impact is being done, you can be sure that i will be there to help effectively. i deeply believe that instead of trying to prove to the world how good you are, you should be good and do good .. there is no reason to expose these actions, maybe share the idea to reach more people, but not to prove your worth.
+i believe that movements can have their relevance in spreading helpful actions, but they definitely take away a lot of individuality as they are more "practical" to share. just press a button and that's it, you did your part... but did you really ?
+when sharing content you need to have in mind that you are reaching people that follow you, therefore, that are similar to you. they will agree with the good causes you are sharing, but only agreeing isn't enough : it will give you reputation points, but nothing will change. searching for content that will lead these people to an oportunity in helping actively for the cause, within their reality, is the best you can do !!
+i try to form my own opinion and spread the good with my words, with my content and my actions, and for that, i do not act on impulse to participate in anything ; i evaluate the causes and actions before i get up and take a step forward. there are people who are really struggling to make something relevant happen, and i appreciate it immensely.. i look forward supporting these people. if they happen to use movement names i don't mind ( unless the movement itself is rather problematic ), but working hard for a good cause is completely different to relying entirely on "ready to use" sentences. as a white person i would feel completely pathetic in using racism, something terrible i will never experience, as a way to gain compliments and followers. i will never do so, and i will never support people who do so. i share helpful content, i create hopefully helpful content, and it's okay if some people are going to misinterpret me because i don't do those things in search of praise.
+help black people, be gentle with black people, respect black people, support the value and importance that each individual has in society. do it not only when a movement is trending, do it not only by sharing repetitive phrases, but on a daily basis, because you can. do it through kindness and love out of pure will, not to improve your reputation !
+</pre>
+
+<br><br>
+that's it for today !! keep an eye open and you will see new content soon ~
+<br><br>
+xoxo <sub><sub><img src="https://i.imgur.com/C6vXUkJ.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/bAE2SKx.gif"/></center>
+
+<br><br><br>
+
+<br>
+
 
 <center><img src="https://i.imgur.com/gLJhbhk.gif"/></center>
 <br><br>
