--- a/fashion.html
+++ b/fashion.html
@@ -463,7 +463,7 @@ p { margin: 0; }
 <font color="#bca6a0">( those photos are timeless )</font><br><br>
 <br><br>
 
-<img width="300px" height="auto" src="https://i.imgur.com/dzzKWU1.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/VqyaQRz.jpg"/><br><br>
 <br>
 
 <br><br><br>
@@ -492,6 +492,10 @@ p { margin: 0; }
 
 <br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/v85iR7v.png"/><br><br>
+<br>
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/ry1YBrt.jpg"/><br><br>
 <br>
 
 <br><br><br>
