--- a/about.html
+++ b/about.html
@@ -440,8 +440,7 @@ p { margin: 0; }
 <div id="spoiler1" class="spoiler-area is-closed">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
-<img width="180" height="auto" src="https://i.imgur.com/smoPDcy.png"/>　
-<img width="180" height="auto" src="https://i.imgur.com/M6mxDX6.png"/>
+<img width="350" height="auto" src="https://i.imgur.com/3v4WYXw.png"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
