--- a/blog.html
+++ b/blog.html
@@ -627,7 +627,7 @@ xoxo <sub><sub><img src="https://i.imgur.com/jaaFgUI.gif"/></sub></sub></pre>
 
 <br>
 
-<center><img width="auto" height="30px" src="https://i.imgur.com/rLfssm8.png"/><img width="auto" height="30px" src="https://i.imgur.com/rLfssm8.png"/><img width="auto" height="30px" src="https://i.imgur.com/rLfssm8.png"/></center>
+<center><img width="auto" height="50px" src="https://i.imgur.com/rt6nYVa.png"/><img width="auto" height="50px" src="https://i.imgur.com/rt6nYVa.png"/></center>
 
 <br><br><br>
 
