--- a/gaming.html
+++ b/gaming.html
@@ -601,12 +601,84 @@ cutest baby there is.<br>
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
 <font color="#a8958d">　<b>poupée girl</b><br>
 　　　backup server : bentewee<br>
-　　　invitation codes : 5 left<br><br><br>
+　　　invitation codes : 4 left<br><br><br>
 
-<div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 270px; line-height:10px;">
+<div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 275px; line-height:10px;">
 <iframe src="/pupe/3" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
 </div>
 </font>
+
+<br><br><br><br>
+
+<sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
+<font color="#a8958d">　<b>transformice</b><br>
+　　　community : international<br><br><br>
+
+<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 120px; line-height:10px; padding:5px;">
+<img id="fluffy" style="width:100px; height:auto; position:absolute; left:10px; top:25px;" src="https://i.imgur.com/RM4YHL8.png">
+
+        <script type = "text/javascript">
+            var image3 = document.getElementById("fluffy");
+            var currentPos = 0;
+            var images3 = ["https://i.imgur.com/RM4YHL8.png", "https://i.imgur.com/V9aqg06.png"]
+
+            function volgendefoto3() {
+                if (++currentPos >= images3.length)
+                    currentPos = 0;
+
+                image3.src = images3[currentPos];
+            }
+
+            setInterval(volgendefoto3, 1000);
+        </script>
+
+<font color="#a37c81" style="position:absolute; left:115px; top:9px; font-size:8px;">
+<sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
+　<font color="#b89196">level :</font> 33<br>
+　<font color="#b89196">fav mode :</font> vanilla<br>
+　<font color="#b89196">fav title :</font> little bell<br>
+<br>
+<sub><sub><img width="auto" height="15px" src="https://i.imgur.com/QeXrxRx.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
+　<font color="#b89196">spiritual guide [28]</font><br>
+　<font color="#b89196">wind master [4]</font><br>
+</font>
+
+<font color="#a37c81" style="position:absolute; left:215px; top:7px; font-size:8px;">
+　<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/i5J84sF.png"></sub></sub> <b>progress titles :</b><br>
+<div style="overflow:hidden; border: 5px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 95px; height: 75px; overflow-x:hidden; padding:3px; margin-top:5px;">
+<div style="border: none; width: 87px; height: 73px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:2px;">
+‌<font color="#b0878d" style="font-size:7px;">
+• Little Mouse<br>
+ ‌ • Shaman Disciple<br>
+ ‌ • Accomplished<br>Shaman<br>
+ ‌ • Greedy Mouse<br>
+ ‌ • Here ! Cheese !<br>
+ ‌ • Yeeeeah Cheese ^^<br>
+ ‌ • Cheeeeeese *-*<br>
+ ‌ • Fast Mouse<br>
+ ‌ • Glutton Mouse<br>
+ ‌ • Gleany<br>
+ ‌ • Activist Mouse<br>
+ ‌ • Unionized Mouse<br>
+ ‌ • Mouse on Strike<br>
+ ‌ • Nice Mouse<br>
+ ‌ • Adorable Mouse<br>
+ ‌ • Charming Mouse<br>
+ ‌ • Pretty Mouse<br>
+ ‌ • Trick or Treat<br>
+ ‌ • Ghostbuster<br>
+ ‌ • Scooby-Doo<br>
+ ‌ • Souris-chan<br>
+ ‌ • Transformist<br>
+ ‌ • Earthworm<br>
+ ‌ • Jack-o'-lantern<br>
+</font>
+</div>
+
+</div>
+</font>
+
+</div>
 
 <br><br><br><br>
 
