--- a/gaming.html
+++ b/gaming.html
@@ -669,6 +669,7 @@ cutest baby there is.<br>
  ‌ • Ghostbuster<br>
  ‌ • Scooby-Doo<br>
  ‌ • Souris-chan<br>
+ ‌ • Little Bell<br>
  ‌ • Transformist<br>
  ‌ • Earthworm<br>
  ‌ • Jack-o'-lantern<br>
