--- a/gaming.html
+++ b/gaming.html
@@ -604,7 +604,7 @@ cutest baby there is.<br>
 　　　invitation codes : 4 left<br><br><br>
 
 <div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 275px; line-height:10px;">
-<iframe src="/pupe/3" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
+<iframe src="/pupe/4" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
 </div>
 </font>
 
@@ -634,13 +634,13 @@ cutest baby there is.<br>
 
 <font color="#a37c81" style="position:absolute; left:115px; top:9px; font-size:8px;">
 <sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
-　<font color="#b89196">level :</font> 33<br>
+　<font color="#b89196">level :</font> 36<br>
 　<font color="#b89196">fav mode :</font> vanilla<br>
 　<font color="#b89196">fav title :</font> little bell<br>
 <br>
 <sub><sub><img width="auto" height="15px" src="https://i.imgur.com/QeXrxRx.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
-　<font color="#b89196">spiritual guide [28]</font><br>
-　<font color="#b89196">wind master [4]</font><br>
+　<font color="#b89196">spiritual guide [26]</font><br>
+　<font color="#b89196">wind master [9]</font><br>
 </font>
 
 <font color="#a37c81" style="position:absolute; left:215px; top:7px; font-size:8px;">
@@ -658,6 +658,10 @@ cutest baby there is.<br>
  ‌ • Fast Mouse<br>
  ‌ • Glutton Mouse<br>
  ‌ • Gleany<br>
+ ‌ • Plumpy Mouse<br>
+ ‌ • Paunchy Mouse<br>
+ ‌ • Chubby Mouse<br>
+ ‌ • Fluffy Mouse<br>
  ‌ • Activist Mouse<br>
  ‌ • Unionized Mouse<br>
  ‌ • Mouse on Strike<br>
