--- a/recommended.html
+++ b/recommended.html
@@ -326,7 +326,11 @@ z-index: 3;
 <font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
 <br><br><br>
 
-　‌‌<a href="https://dive.kuchiki.net" target="_blank"><img src="https://i.imgur.com/I3JS0NJ.gif"></a>
+　‌‌<a href="https://cyber.nymph.garden" target="_blank"><img src="https://i.imgur.com/hC0kJmY.gif"></a>
+　<a href="https://cloudworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MXRItda.gif"></a>
+　<a href="https://hishoku-sora.blogspot.com" target="_blank"><img src="https://i.imgur.com/VpojhaF.gif"></a>
+
+　　‌‌<br><br>　<a href="https://dive.kuchiki.net" target="_blank"><img src="https://i.imgur.com/I3JS0NJ.gif"></a>
 　<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="https://i.imgur.com/tHRwo5p.gif"></a>
 　<a href="https://candymilk.neocities.org" target="_blank"><img src="https://i.imgur.com/7iYy1hj.gif"></a>
 
