--- a/portfolio.html
+++ b/portfolio.html
@@ -318,9 +318,9 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="350px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
-<img width="350px" height="auto" src="https://i.imgur.com/u8V6LH9.png"><br><br><br>
-<img width="175px" height="auto" src="https://i.imgur.com/Thd4bR1.png"> <img width="175px" height="auto" src="https://i.imgur.com/WR8XveK.png">
+<img width="350px" height="auto" src="https://i.imgur.com/v333iOT.png"><br><br>
+<img width="350px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br><br>
+<img width="175px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="175px" height="auto" src="https://i.imgur.com/QApSfkU.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
