--- a/archive.html
+++ b/archive.html
@@ -321,6 +321,92 @@ font-family: Verdana;">
 
 <br>
 
+
+<center><img height="35px" width="auto" src="https://i.imgur.com/N4WDA98.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 27 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/a8TiQfJ.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this month my website completed 3 years online !!
+i'm grateful for everything i learned by sharing my works and thoughts, and specially by your motivating messages. thank you so much <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+i am slowly adapting into my new, lovely routine ..
+doing all housework, taking care of myself & bubu, spending entertaining time, resting properly and still having time for working on projects and eventual commissions... it's certainly a lot to think about !!
+but thankfully, i have the time for everything, if i don't spend energy with draining things.
+i'm trying my best to keep myself away from all stressful stuff, my plans for are working quite well !
+i made a few things lately, but i was feeling the need of resting more than usual.. so i thought it was a good idea to return playing a game that is such a comfort space for me : ragnarok online
+i started a whole new account in the official brazilian server, the one i have played since i was 7. i gotta say i am growing pretty fast in there and i'm having a lot of fun exploring the new content, so you might see some updates on my gaming page with my new characters and stuff, once i get to reborn them to transcendent <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+i'm feeling pretty happy about those experiences, and i'm sure that i will get to make more progress in the projects naturally, if i don't overdo myself.
+better spending one month working wholeheartedly than rushing one week wearifully, right ? <sub><img src="https://i.imgur.com/8OvdGqX.gif"/></sub>
+i like making posts once i have a handful of things to show, and now it's the right time, so let's see what i made :
+</pre>
+<br><br>
+
+<center><a href="/fluffy" target="_blank"><img src="https://i.imgur.com/Hva2CBT.png"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/pinky%20promise.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">pinky promise .mp3</font></a>　
+<br></center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this is a little dress up html game i just did for practicing some editing & basic javascript .. what do you think ? <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+i think it turned out very cute, and i'm happy to show you this lovely music box melody too. please click the teddy bear to play it yourself !
+
+after some time without making big ascii art + many requests on the symbols i use, i had the idea of making a web page for keeping my resources, <a id="linkbjinho" href="https://ascii.pooftie.me" target="_blank">ascii.pooftie.me</a> !!
+the layout is fully made with symbols ( with a bit of html magic, of course ) <sub><img src="https://i.imgur.com/mKQgU1i.gif"/></sub>
+i hope it can be useful for getting started or improving your little "text drawings" :
+</pre><br><br>
+
+<center><a href="https://ascii.pooftie.me" target="_blank"><img width="410px" height="auto" src="https://i.imgur.com/9PKbQpg.gif"/></a></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's certainly hard making stuff that look interesting with only symbols, it looks simple, but i'm proud <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i often have ideas that sound pretty random, but it's important to try and make things happen, right ?
+
+sometimes i can't get in the mood for working on my most important projects, but i try and make anything for at least make good use of my time by study & practice .. i believe this is a good way of resting while being productive !
+i find coloring very relaxing, and as i am feeling a little anxious lately, having cute drawings to color is such a bless <sub><img src="https://i.imgur.com/ldY80KV.gif"/></sub>
+so here are two of my most recent ones :
+</pre><br><br>
+
+<center><img width="330px" height="auto" src="https://i.imgur.com/nUoD8rM.png"/></center>
+<br>
+<center><img width="330px" height="auto" src="https://i.imgur.com/mgVb7Br.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i tried editing the background this time too.. i don't know if i really like it or not, but well. i like the colors & textures.
+those adorable coloring pages are from <a id="linkbjinho" href="https://ameblo.jp/jyohanna/" target="_blank">ドリーミィー・フェザー</a> !
+
+i would like to express my gratitude for you who keep reading this blog to this day, i feel really lucky for having such sweet angels following my content and wishing me good things..
+i hope you are staying safe and living happy days, even if you never got to message or support me, i still acknowledge & really appreciate your presence here. <font color="#d3a5a5" style="font-size:11px;">♡</font></pre>
+see you next time,
+<br><br>
+xoxo <sub><sub><img src="https://i.imgur.com/VuYWNMS.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img height="35px" width="auto" src="https://i.imgur.com/N4WDA98.png"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/bAE2SKx.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
